refactor: migrar los precios de float a BigDecimal