@@ -4,27 +4,29 @@ import com.example.restaurant.dto.order.OrderResponseDTO;
 import com.example.restaurant.models.Order;
 import com.example.restaurant.models.Client;
 import com.example.restaurant.models.Dish;
-import com.example.restaurant.utils.RoundToTwoDecimals;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrderMapper {
 
     public static OrderResponseDTO toDto(Order order) {
-        OrderResponseDTO dto = new OrderResponseDTO();
-        dto.setId(order.getId());
-        dto.setClient(ClientMapper.toDto(order.getClient()));
-        dto.setDishes(order.getDishes().stream()
-                .map(DishMapper::convertToDto)
-                .collect(Collectors.toList()));
-        dto.setTotalPrice(getTotalPrice(order));
-        dto.setOrderDate(order.getOrderDate());
-        return dto;
+        return new OrderResponseDTO(
+                order.getId(),
+                ClientMapper.toDto(order.getClient()),
+                order.getDishes().stream()
+                        .map(DishMapper::convertToDto)
+                        .toList(),
+                getTotalPrice(order),
+                order.getOrderDate()
+        );
     }
 
-    private static float getTotalPrice(Order order) {
-        return order.getTotalPrice() != null ? RoundToTwoDecimals.roundToTwoDecimals(order.getTotalPrice()) : 0.0f;
+    private static BigDecimal getTotalPrice(Order order) {
+        return order.getTotalPrice() != null
+                ? order.getTotalPrice().setScale(2, RoundingMode.HALF_UP)
+                : BigDecimal.ZERO;
     }
 
     public static Order toEntity(Client client, List<Dish> dishes) {
